# spec-trace

./: .env.example  .gitignore  CLAUDE.md  README.md  progress.md  pyproject.toml
docs/: CLAUDE.md
docs/phase-1/: README.md  step1_meetings-download.md  step2_change-requests-download.md  step3_specifications-download.md  step4_extraction.md  step5_data-cleanup-for-parsing.md  step6_data-transformation-for-parsing.md  step7_document-parsing.md
docs/phase-2/: CLAUDE.md  LLM_TOKEN_GUIDELINES.md  README.md  Tdoc_parser_specs.md  refactoring-plan-v2.md  step1_langgraph-parser-setup.md  step1_langgraph-system.md  step1_ontology.md  step2_database.md  step2_improvement_plan.md  step2_multi-section-expansion.md  step2_preprocess.md  step3_metadata.md  step3_query-interface.md  step4_toc.md  step5_sections.md
docs/phase-2/specs/: tdoc-ontology-spec(Tdoc_list).md  tdoc-ontology-spec.md
docs/phase-3/: README.md  step1_parsing.md  step2_neo4j.md  step3_validation.md
docs/phase-3/specs/: tdoc_ontology_specs(Final_report)
logs/phase-1/verification/: steps_1-6_verification_report.md
ontology/: README.md  tdoc-ontology.ttl  tdoc-ontology.ttl.bak.phase2
ontology/scripts/: 02_reference_classes.py  03_tdoc_instances.py  04_validation.py
ontology/versions/: README.md  tdoc-ontology-v2.0.0-phase3.ttl
scripts/experiments/equation-extraction/: .gitignore  EXPERIMENT_REPORT.md  batch_test_10meetings.py  batch_test_all_remaining.py  detailed_test.py  full_parse_test.py  full_parse_test_v2.py  hybrid_parser.py  prototype.py  validate_hybrid_vs_phase3.py  validate_text_compat.py
(+314 files in other folders)
